# OSINT_REGEX

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  OSINT_REGEX.py  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
docs/: reference.md
osint_regex/: __init__.py
src/osint_regex/: __init__.py  patterns.py
tests/: test_package_api.py  test_patterns.py
