[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-regex"
dynamic = ["version"]
description = "A collection of regex patterns for OSINT."
readme = "README.md"
authors = [{name = "OSINTRegex"}]
license = {text = "MIT"}
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["osint_regex"]

[tool.setuptools.dynamic]
version = {attr = "osint_regex.__version__"}
