[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-regex"
version = "0.2.0"
description = "Regular expression helpers for OSINT tasks."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
urls = {"Homepage" = "https://github.com/OpenAI/OSINT_REGEX"}

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
show_error_codes = true
warn_unused_configs = true
